Update Math and numerics

--- a/articles/4.md
+++ b/articles/4.md
@@ -233,7 +233,7 @@ puts'this is code-golf!'=~/z/?:∃golf: :∄golf
 
 ------
 
-|            Previous article             |               Next article               |
-| :-------------------------------------: | :--------------------------------------: |
-| [IO, Kernel and ARGV](../articles/3.md) | [Math and number types](../articles/5.md) |
+|            Previous article             |             Next article              |
+| :-------------------------------------: | :-----------------------------------: |
+| [IO, Kernel and ARGV](../articles/3.md) | [Math and numerics](../articles/5.md) |
 
