--- a/articles/6.md
+++ b/articles/6.md
@@ -12,7 +12,7 @@ TODO
 
 ------
 
-|             Previous article             |
-| :--------------------------------------: |
-| [Math and number types](../articles/5.md) |
+|           Previous article            |
+| :-----------------------------------: |
+| [Math and numerics](../articles/5.md) |
 
