Update Arrays and ranges

--- a/articles/1.md
+++ b/articles/1.md
@@ -1,5 +1,3 @@
-<p align="center"><img width="100" src="../assets/golf.png"></p>
-
 # General
 
 *General tips and advice for code-golf, including common (**non-language specific**) code-golf techniques.*
@@ -11,6 +9,7 @@
 - [Shorten variable names](#shorten_variable_names)
 - [Better control flow and method returns](#better_control_flow_and_method_returns)
 - [Operator precedence](#operator_precedence)
+- [Use `;` to write code on one line](#use_;_to_write_code_on_one_line)
 
 ---
 
@@ -340,6 +339,19 @@ I recommend first writing out your solution with parentheses and whitespace, the
 a = (((x%2)==0)||(x>5)) ? 'y' : 'n'
 # Then eliminate them and see if the code still produces the same result
 a=x%2==0||x>5?'y':'n'
+```
+
+## Use `;` to write code on one line <a name="use_;_to_write_code_on_one_line"></a>
+
+Though this doesn't actually save any bytes since `;` takes up one byte just like the newline character `\n` does, but it is often more desirable to write your code on one line:
+
+```ruby
+# 7 bytes
+a=5
+p a
+
+# 7 bytes
+a=5;p a
 ```
 
 ------
