--- a/articles/5.md
+++ b/articles/5.md
@@ -1,5 +1,3 @@
-<p align="center"><img width="100" src="../assets/golf.png"></p>
-
 # Math and numerics
 
 *Deciding which type of numeric to use, how to declare them, and general advice for any math involved in golfing.*
@@ -11,6 +9,7 @@
 - [Don't use `<=` or `>=` for comparisons](#don't_use_leq_or_geq_for_comparisons)
 - [Use the `Integer#times` method for looping](#use_the_integer#times_method_for_looping)
 - [Use `Kernel#p` to output numerics](#use_kernel#p_to_output_numerics)
+- [Use literals for `Complex` and `Rational` initialization](#use_literals_for_complex_and_rational_initialization)
 
 ---
 
@@ -89,7 +88,7 @@ for i in 0..7
 end
 # 01234567
 
-# 38 bytes - have to use can't use {} for the block and spans multiple lines
+# 38 bytes - can't use {} for the block and spans multiple lines
 i=0
 while i<8 do 
   print i
@@ -134,6 +133,39 @@ p 10000.0 #=> 10000.0
 p 1e4 # 10000.0
 p 50 #=> 50
 p 7 #=> 7
+```
+
+## Use literals for `Complex` and `Rational` initialization<a name="use_literals_for_complex_and_rational_initialization"></a>
+
+Not many people know that the `Rational` and `Complex` classes have literals which you can use for initialization:
+
+```ruby
+complex = [5+2.i, Complex(5,2)]
+
+puts complex.map{|c|{class: c.class, conjugate: c.conj}}
+# {:class=>Complex, :conjugate=>(5-2i)}
+# {:class=>Complex, :conjugate=>(5-2i)}
+
+# 15 bytes
+p Complex(5,-2) #=> (5-2i)
+
+# 7 bytes
+p 5-2.i #=> (5-2i)
+```
+
+```ruby
+rational = [4.7r, Rational(47,10), Rational(141,30)]
+
+puts rational.map{|r|{class: r.class, frac: r, dec: r.to_f}}
+#{:class=>Rational, :frac=>(47/10), :dec=>4.7}
+#{:class=>Rational, :frac=>(47/10), :dec=>4.7}
+#{:class=>Rational, :frac=>(47/10), :dec=>4.7}
+
+# 17 bytes
+p Rational(47,10) #=> (47/10)
+
+# 6 bytes
+p 4.7r #=> (47/10)
 ```
 
 ------
