--- a/articles/4.md
+++ b/articles/4.md
@@ -6,7 +6,7 @@
 
 - [String interpolation over concatenation](#string_interpolation_over_concatenation)
 - [Interpolate with instance variables](#interpolate_with_instance_variables)
-- [Use `%` notation](#use_%_notation)
+- [Use `%` notation](#use_percentage_notation)
 - [Use `?` for ASCII characters](#use_?_for_ascii_characters)
 - [Use `chars` instead of `split`](#use_chars_instead_of_split)
 - [Split strings without using a parameter](#split_strings_without_using_a_parameter)
@@ -85,7 +85,7 @@ puts"The value of #@a+#@b-#@c is #{@a+@b+@c}".
 # The value of 1+2-3 is 0.
 ```
 
-## Use `%` notation <a name="use_%_notation"></a>
+## Use `%` notation <a name="use_percentage_notation"></a>
 
 Ruby has a useful way to quote strings, inspired by Perl. This is done by using `%` followed by a non-alphanumeric delimiter such as `{}`, `[]`, `()`, `<>`, or even `??` or `--`. But if using any of the bracket delimiters, then those same delimiters can appear *unescaped* in the string as long as they are in *balanced* pairs:
 
