--- a/articles/6.md
+++ b/articles/6.md
@@ -9,19 +9,19 @@
 - [Use the exclusive range operator `...`](#use_the_exclusive_range_operator_...)
 - [Use `Array#<<` instead of `Array#push`](#use_array#<<_instead_of_array#push)
 - [Don't use `Array#uniq` to eliminate duplicates](#don't_use_array#uniq_to_eliminate_duplicates)
-- [Don't use `Range#member?` or `Range#include?` to check for range membership](#don't_use_range#member?_or_range#include?_ to_check_for_range_membership)
+- [Don't use `Range#member?` or `Range#include?` to check for range membership](#don't_use_range#member?_or_range#include?_to_check_for_range_membership)
 - [Use `Я` and `ᴙ` for ranges of 2 and 3 letters](#use_Я_and_ᴙ_for_ranges_of_2_and_3_letters)
 - [Use the splat operator `*` instead of `to_a`](#use_the_splat_operator_*_instead_of_to_a)
 - [Use `Integer#downto` for decreasing integer ranges](#use_integer#downto_for_decreasing_integer_ranges)
-- [Use `[]` instead of `Array#new` for array initialization](#use_[]_instead_of_array#new for array initialization)
+- [Use `[]` instead of `Array#new` for array initialization](#use_[]_instead_of_array#new_for_array_initialization)
 - [Use the splat operator `*` to declare singleton arrays](#use_the_splat_operator_*_to_declare_singleton_arrays)
-- [Eliminate square brackets for array assignment](#eliminate_square brackets_for_array_assignment)
+- [Eliminate square brackets for array assignment](#eliminate_square_brackets_for_array_assignment)
 - [Array destructuring and pattern matching with the splat operator `*`](#array_destructuring_and_pattern_matching_with_the_splat_operator_*)
 - [Use the splat operator `*` to flatten arrays](#use_the_splat_operator_*_to_flatten_arrays)
 
 ---
 
-## Use `%` for declaring arrays of strings or symbols <a name="use_%_for_declaring_arrays_of_strings_or_symbols"></a>
+## Use `%` for declaring arrays of strings or symbols <a name="use_percentage_for_declaring_arrays_of_strings_or_symbols"></a>
 
 Rather than declaring arrays of strings with the typical `[]`, we can use `%w()` syntax, which eliminates the need for any quotation marks around the elements in the array. Similarly, `%i()` can be used for symbols, eliminating the need for any preceding `:` before each symbol element:
 
