--- a/articles/6.md
+++ b/articles/6.md
@@ -4,7 +4,7 @@
 
 ------
 
-- [Use `%` for declaring arrays of strings or symbols](#use_%_for_declaring_arrays_of_strings_or_symbols)
+- [Use `%` for declaring arrays of strings or symbols](#use_percentage_for_declaring_arrays_of_strings_or_symbols)
 - [Use `Array#*` instead of `Array#join`](#use_array#*_instead_of_array#join)
 - [Use the exclusive range operator `...`](#use_the_exclusive_range_operator_...)
 - [Use `Array#<<` instead of `Array#push`](#use_array#<<_instead_of_array#push)
