--- a/articles/6.md
+++ b/articles/6.md
@@ -9,11 +9,11 @@
 - [Use the exclusive range operator `...`](#use_the_exclusive_range_operator_...)
 - [Use `Array#<<` instead of `Array#push`](#use_array#<<_instead_of_array#push)
 - [Don't use `Array#uniq` to eliminate duplicates](#don't_use_array#uniq_to_eliminate_duplicates)
-- [Don't use `Range#member?` or `Range#include?` to check for range membership](#don't_use_range#member?_or_range#include?_to_check_for_range_membership)
+- [Don't use `Range#member?` or `Range#include?` to check for range membership](#don't_use_range#member_or_range#include_to_check_for_range_membership)
 - [Use `Я` and `ᴙ` for ranges of 2 and 3 letters](#use_Я_and_ᴙ_for_ranges_of_2_and_3_letters)
 - [Use the splat operator `*` instead of `to_a`](#use_the_splat_operator_*_instead_of_to_a)
 - [Use `Integer#downto` for decreasing integer ranges](#use_integer#downto_for_decreasing_integer_ranges)
-- [Use `[]` instead of `Array#new` for array initialization](#use_[]_instead_of_array#new_for_array_initialization)
+- [Use `[]` instead of `Array#new` for array initialization](#use_brackets_instead_of_array#new_for_array_initialization)
 - [Use the splat operator `*` to declare singleton arrays](#use_the_splat_operator_*_to_declare_singleton_arrays)
 - [Eliminate square brackets for array assignment](#eliminate_square_brackets_for_array_assignment)
 - [Array destructuring and pattern matching with the splat operator `*`](#array_destructuring_and_pattern_matching_with_the_splat_operator_*)
@@ -153,7 +153,7 @@ p [1,0,0,1,1,0,2,0,2,2,1,3].uniq #=> [1, 0, 2, 3]
 p [1,0,0,1,1,0,2,0,2,2,1,3]|[] #=> [1, 0, 2, 3]
 ```
 
-## Don't use `Range#member?` or `Range#include?` to check for range membership <a name="don't_use_range#member?_or_range#include?_ to_check_for_range_membership"></a>
+## Don't use `Range#member?` or `Range#include?` to check for range membership <a name="don't_use_range#member_or_range#include_ to_check_for_range_membership"></a>
 
 If you want to find out if an element is contained within a given range, you can use the `Range#===` method:
 
@@ -236,7 +236,7 @@ p [*?a..?h].reverse #=> ["h", "g", "f", "e", "d", "c", "b", "a"]
 p [*?h.downto(?a)] #=> undefined method `downto' for "h":String (NoMethodError)
 ```
 
-## Use `[]` instead of `Array#new` for array initialization <a name="use_[]_instead_of_array#new for array initialization"></a>
+## Use `[]` instead of `Array#new` for array initialization <a name="use_brackets_instead_of_array#new for array initialization"></a>
 
 Simple, looks better and saves 7 bytes:
 
