Fix Eliminate [] for array assignment

--- a/articles/6.md
+++ b/articles/6.md
@@ -15,7 +15,7 @@
 - [Use `Integer#downto` for decreasing integer ranges](#use_integer#downto_for_decreasing_integer_ranges)
 - [Use `[]` instead of `Array#new` for array initialization](#use_[]_instead_of_array#new_for_array_initialization)
 - [Use the splat operator `*` to declare singleton arrays](#use_the_splat_operator_*_to_declare_singleton_arrays)
-- [Eliminate square brackets for array assignment](#eliminate_square_brackets_for_array_assignment)
+- [Eliminate `[]` for array assignment](#eliminate_[]_for_array_assignment)
 - [Array destructuring and pattern matching with the splat operator `*`](#array_destructuring_and_pattern_matching_with_the_splat_operator_*)
 - [Use the splat operator `*` to flatten arrays](#use_the_splat_operator_*_to_flatten_arrays)
 
@@ -262,7 +262,7 @@ p a #= [:ruby]
 p b #=> [:ruby]
 ```
 
-## Eliminate square brackets for array assignment <a name="eliminate_square brackets_for_array_assignment"></a>
+## Eliminate `[]` for array assignment <a name="eliminate_[]_for_array_assignment"></a>
 
 Another quick one, and this one saves two bytes:
 
