--- a/articles/6.md
+++ b/articles/6.md
@@ -1,6 +1,6 @@
 # Arrays, ranges and the splat operator
 
-*Techniques for array and range manipulation and optimization, and understanding the Ruby splat operator .*
+*Techniques for array and range manipulation and optimization, and understanding the Ruby splat operator `\*`.*
 
 ------
 
